removed some anchors

--- a/index.html
+++ b/index.html
@@ -105,11 +105,11 @@
 						<section class="split contact">
 							<section>
 								<h3>Phone</h3>
-								<p><a href="#">0422766572</a></p>
+								<p>0422766572</p>
 							</section>
 							<section>
 								<h3>Email</h3>
-								<p><a href="#">Scottcausby@gmail.com</a></p>
+								<p>Scottcausby@gmail.com</p>
 							</section>
 							<section>
 								<h3>Social</h3>
