--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 					<section class="wrapper style1 align-center" id="aboutme">
 						<div class="inner">
 							<h2>About Me</h2>
-							<p>From Armed Security refilling ATM's to traveling and living in South America being a full time dad, studying Spanish in Peru, I have a very colourful background with many stories. After moving back from Peru, I required a career change to be able to provide the best life possible for my daughter and partner. I have always had an inquisitive mind while playing video games and wondering how they worked and got into coding using a bot, to help me play a game when I was either asleep or not at the computer which took hours and hours of editing and debugging JavaScript to make this work.
+							<p>From Armed Security refilling ATM's to traveling and living in South America being a full time dad while studying Spanish in Peru. I have a very colourful background with many stories. After moving back from Peru, I required a career change to be able to provide the best life possible for my daughter and partner. I have always had an inquisitive mind while playing video games and wondering how they worked and got into coding using a bot, to help me play a game when I was either asleep or not at the computer which took hours and hours of editing and debugging JavaScript to make this work.
 								This is the beginning of my journey into the development world and it has been some of the most challenging yet rewarding experiences.
 							</p>
 
